--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <table>
         <tr>
-            <td><img src="./resources/img/faceless-man-hoodie-standing-faceless-man-hoodie-standing-isolated-black-120902678.jpg" width="350px" alt="Faceless man"></td>
+            <td><img src="resources/img/faceless-man-hoodie-standing-faceless-man-hoodie-standing-isolated-black-120902678.jpg" width="350px" alt="Faceless man"></td>
             <td><h1>Manny Tanker</h1>
                 <p><em>Up and coming <strong><a href="https://www.somkiat.cc/programmer-vs-developer-vs-coder/" target="_blank">coder</a>.<strong></em></p>
                 <p><em>"I am a trader and have an extreme love of lanaguages"</em></p></td>
